--- a/Pipfile
+++ b/Pipfile
@@ -12,10 +12,15 @@ django-debug-toolbar = "*"
 requests = "*"
 pillow = "*"
 pyjwt = "*"
+gunicorn = "*"
+dj-database-url = "*"
+whitenoise = "*"
+django-cors-headers = "*"
 
 [dev-packages]
 black = "*"
 flake8 = "*"
+pipenv-to-requirements = "*"
 
 [requires]
 python_version = "3.7"
